--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>br.com.caelum</groupId>
-	<artifactId>vraptor-produtos</artifactId>
+	<artifactId>agendead</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
 
