--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 <!-- 		    <artifactId>vraptor-simplemail</artifactId> -->
 <!-- 		    <version>4.0.0-RC2</version> -->
 <!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
